two.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two
  labels:
    name: two
spec:
  containers:
  - name: two
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
