one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: one
  labels:
    name: one
spec:
  containers:
  - name: one
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: one-service
spec:
  selector:
    app: one
  ports:
  - port: 80
    targetPort: 80
