policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: test-network-policy

  namespace: two

spec:

  podSelector:

    matchLabels:

      app: two-service

  policyTypes:

    - Ingress


  ingress:

    - from:
        - namespaceSelector:

            matchLabels:

              project: myproject

        - podSelector:

            matchLabels:

              app: one

      ports:

        - protocol: TCP

          port: 80
